# EffectiveCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tags
src/: test  test.c
src/02const/: const.cpp
src/03const2/: UseConst.cpp  pthread_cancel.cpp  ptr.cpp
src/04Initialization/: init.cpp
src/0Introduction/: copyAssignment.cpp
